# CStandardPOO

./: CMakeLists.txt  main.c  main2.c  nisteFunctii.c  unHeaderDubios.h
